objects/vlocity_ins__InsuranceClaimInvolvedInjury__c.object
<CustomObject>
    <description>Represents insurance claimant injury information reported under a claim such as severity and kind of injury, parties involved and medical cost. Master-detail child object of Claim.</description>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Involved Injuries</relationshipLabel>
        <relationshipName>Involved_Injuries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claimant Id</label>
        <referenceTo>vlocity_ins__InsuranceClaimPartyRelationship__c</referenceTo>
        <relationshipLabel>Involved Injuries</relationshipLabel>
        <relationshipName>InvolvedInjuries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantParty__c</fullName>
        <formula>vlocity_ins__ClaimantId__r.vlocity_ins__Party__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Involved Injuries</relationshipLabel>
        <relationshipName>Involved_Injuries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Severity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Involved Injuries</relationshipLabel>
        <relationshipName>InvolvedInjury</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TreatedBy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Treated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Involved Injury</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Injury Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Involved Injuries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>